today changes available lablel are icluded

--- a/reservation page/reservation.html
+++ b/reservation page/reservation.html
@@ -113,20 +113,20 @@
                         <div class="border container shadow-sm rounded-3 mb-3">
                             <div class="container">
                                 <div class="row justify-content-center pt-2">
-                                  <div class="col-lg-3 col-md-6">
-                                    <p>check In <br> <b>Mon, 27 May, 2024</b> <br> <span>12 am</span></p>
-                                  </div>
-                                  <div class="col-lg-3 col-md-6">
-                                    <p>check In <br> <b>Mon, 27 May, 2024</b> <br> <span>12 am</span></p>
-                                  </div>
-                                  <div class="col-lg-3 col-md-6">
-                                    <p>check In <br> <b>Mon, 27 May, 2024</b> <br> <span>12 am</span></p>
-                                  </div>
-                                  <div class="col-lg-3 col-md-6">
-                                    <h6 class="text-danger pt-4"><b>Explore Inclusions</b></h6>
-                                  </div>
+                                    <div class="col-lg-3 col-md-6">
+                                        <p>check In <br> <b>Mon, 27 May, 2024</b> <br> <span>12 am</span></p>
+                                    </div>
+                                    <div class="col-lg-3 col-md-6">
+                                        <p>check out <br> <b>Tue, 28 May, 2024</b> <br> <span>12 am</span></p>
+                                    </div>
+                                    <div class="col-lg-3 col-md-6">
+                                        <p>Guests <br> <b>2 Guests | 1rom</b> <br> <span>1 Night</span></p>
+                                    </div>
+                                    <div class="col-lg-3 col-md-6">
+                                        <h6 class="text-danger pt-4"><b>Explore Inclusions</b></h6>
+                                    </div>
                                 </div>
-                              </div>
+                            </div>
                         </div>
                         <!-- total cost overview start  -->
                         <div class="total-cost-overview">
@@ -167,7 +167,8 @@
                                 <input type="radio" class="text-danger">
                             </div>
                             <div class="col-8">
-                                <p style="font-size: 12px;"><b>Summer vacation</b><br>Congratulations on choosing this Homestay! Discount of INR 214 has been applied for your Vacation</p>
+                                <p style="font-size: 12px;"><b>Summer vacation</b><br>Congratulations on choosing this
+                                    Homestay! Discount of INR 214 has been applied for your Vacation</p>
                             </div>
                             <div class="col-3">
                                 <p class="text-danger"><b>₹214</b></p>
@@ -200,7 +201,8 @@
                                 <input type="radio" class="text-danger">
                             </div>
                             <div class="col-8">
-                                <p style="font-size: 12px;"><b class="text-danger">YSPOT <span class="text-dark">BESTBUY</span></b><br>Get INR 174 Off</p>
+                                <p style="font-size: 12px;"><b class="text-danger">YSPOT <span
+                                            class="text-dark">BESTBUY</span></b><br>Get INR 174 Off</p>
                             </div>
                             <div class="col-3">
                                 <p class="text-danger"><b>₹174</b></p>
@@ -211,7 +213,9 @@
                                 <input type="radio" class="text-danger">
                             </div>
                             <div class="col-8">
-                                <p style="font-size: 12px;"><b class="text-danger">YSPOT <span class="text-dark">BIGSAVER</span></b><br>Use Y.SPOTBIGSAVER to get a Discount of INR 146 off</p>
+                                <p style="font-size: 12px;"><b class="text-danger">YSPOT <span
+                                            class="text-dark">BIGSAVER</span></b><br>Use Y.SPOTBIGSAVER to get a
+                                    Discount of INR 146 off</p>
                             </div>
                             <div class="col-3">
                                 <p class="text-danger"><b>₹146</b></p>
@@ -224,8 +228,9 @@
             <!-- first hotel details section end  -->
             <!-- guest details section start  -->
             <div class="border container shadow-sm rounded-3">
-                <h5>GUEST DETAILS</h5><hr>
-                <form action="" >
+                <h5>GUEST DETAILS</h5>
+                <hr>
+                <form action="">
 
                 </form>
             </div>
@@ -236,39 +241,74 @@
                 <div class="total-cost-overview">
                     <div class="d-flex bd-highlight justify-content-center align-items-center">
                         <img class="px-1" src="image/payment method icons/stars.jpg" alt="">
-                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Reservation</b> <br>Pay when you check-in</div>
-                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt=""> </div>
+                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Reservation</b> <br>Pay when you
+                            check-in</div>
+                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt="">
+                        </div>
                     </div>
                     <hr class=" text-danger bold" style="margin: 1%;">
                     <div class="d-flex bd-highlight justify-content-center align-items-center">
-                        <img class="px-1"  src="image/payment method icons/image 6.jpg" alt="">
-                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">UPI options</b> <br>Pay directly from your Bank Account</div>
-                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt=""> </div>
+                        <img class="px-1" src="image/payment method icons/image 6.jpg" alt="">
+                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">UPI options</b> <br>Pay directly
+                            from your Bank Account</div>
+                        <div
+                        class="col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center single-line available-soon-sticker">
+                        <b>Available Soon</b>
+                        </div>
+                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt="">
+                        </div>
                     </div>
                     <hr class=" text-danger bold" style="margin: 1%;">
                     <div class="d-flex bd-highlight justify-content-center align-items-center">
-                        <img class="px-1"  src="image/payment method icons/credit_card.jpg" alt="">
-                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Credit/Debit/AtM Card </b> <br>PVisa, Mastercard, Amex, Rupau and more</div>
-                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt=""> </div>
+                        <img class="px-1" src="image/payment method icons/credit_card.jpg" alt="">
+                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Credit/Debit/AtM Card </b>
+                            <br>PVisa, Mastercard, Amex, Rupau and more
+                        </div>
+                        <div
+                        class="col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center single-line available-soon-sticker">
+                        <b>Available Soon</b>
+                        </div>
+                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt="">
+                        </div>
                     </div>
                     <hr class=" text-danger bold" style="margin: 1%;">
                     <div class="d-flex bd-highlight justify-content-center align-items-center">
-                        <img class="px-1"  src="image/payment method icons/account_balance_wallet.jpg" alt="">
-                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Net Banking</b> <br>All Major Banks Available</div>
-                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt=""> </div>
+                        <img class="px-1" src="image/payment method icons/account_balance_wallet.jpg" alt="">
+                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Net Banking</b> <br>All Major
+                            Banks Available</div>
+                        <div
+                        class="col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center single-line available-soon-sticker">
+                        <b>Available Soon</b>
+                        </div>    
+                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt="">
+                        </div>
                     </div>
                     <hr class=" text-danger bold" style="margin: 1%;">
                     <div class="d-flex bd-highlight justify-content-center align-items-center">
-                        <img class="px-1"  src="image/payment method icons/account_balance_wallet.jpg" alt="">
-                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Mobile Wallets</b> <br>AmazonPay, Mobikwik, Payzapp</div>
-                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt=""> </div>
+                        <img class="px-1" src="image/payment method icons/account_balance_wallet.jpg" alt="">
+                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Mobile Wallets</b>
+                            <br>AmazonPay, Mobikwik, Payzapp
+                        </div>
+                        <div
+                            class="col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center single-line available-soon-sticker">
+                            Available Soon
+                        </div>
+                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt="">
+                        </div>
                     </div>
                     <hr class=" text-danger bold" style="margin: 1%;">
                     <div class="d-flex bd-highlight justify-content-center align-items-center">
-                        <img class="px-1"  src="image/payment method icons/Frame 623.jpg" alt="">
-                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">EMI</b> <br>Credit/Debit Card EMI available</div>
-                        <div class="p-3 flex-shrink-1 bd-highlight d-flex justify-content-center align-items-center">           <div class="col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center">
-                           <b> Available Soon</b></div> <img src="./image/arrow_forward_ios.jpg" alt=""> </div>
+                        <img class="px-1" src="image/payment method icons/Frame 623.jpg" alt="">
+                        <div class="p-1 w-100 bd-highlight">
+                            <b style="font-size: 16px;">EMI</b> <br>Credit/Debit Card EMI available
+                        </div>
+                        <div
+                            class="col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center single-line available-soon-sticker">
+                            <b>Available Soon</b>
+                        </div>
+                        <div class="px-2 flex-shrink-1 bd-highlight d-flex justify-content-center align-items-center">
+                            <img src="./image/arrow_forward_ios.jpg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -277,63 +317,63 @@
     </main>
     <footer class="footer pt-4">
         <div class="container">
-          <div class="row">
-            <div class="col-md">
-              <h6><b>Help</b></h6>
-              <ul class="list-unstyled">
-                <li><a href="#" class="text-white textdec small-link">FAQ</a></li>
-                <li><a href="#" class="text-white textdec small-link">Privacy policy</a></li>
-                <li><a href="#" class="text-white textdec small-link">Cookies privacy</a></li>
-                <li><a href="#" class="text-white textdec small-link">Terms of use</a></li>
-                <li><a href="#" class="text-white textdec small-link">Help centre</a></li>
-              </ul>
+            <div class="row">
+                <div class="col-md">
+                    <h6><b>Help</b></h6>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-white textdec small-link">FAQ</a></li>
+                        <li><a href="#" class="text-white textdec small-link">Privacy policy</a></li>
+                        <li><a href="#" class="text-white textdec small-link">Cookies privacy</a></li>
+                        <li><a href="#" class="text-white textdec small-link">Terms of use</a></li>
+                        <li><a href="#" class="text-white textdec small-link">Help centre</a></li>
+                    </ul>
+                </div>
+                <div class="col-md">
+                    <h6><b>Get the App</b></h6>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-white textdec small-link">IOS app</a></li>
+                        <li><a href="#" class="text-white textdec small-link">Android app</a></li>
+                    </ul>
+                </div>
+                <div class="col-md">
+                    <h6><b>Company</b></h6>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-white textdec small-link">About Us</a></li>
+                        <li><a href="#" class="text-white textdec small-link">Blog</a></li>
+                        <li><a href="#" class="text-white textdec small-link">Careers</a></li>
+                        <li><a href="#" class="text-white textdec small-link">PointMAX</a></li>
+                    </ul>
+                </div>
+                <div class="col-md">
+                    <h6><b>Destination</b></h6>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-white textdec small-link">Cities</a></li>
+                        <li><a href="#" class="text-white textdec small-link">Spiritual places </a></li>
+                        <li><a href="#" class="text-white textdec small-link">Hill Stations</a></li>
+                        <li><a href="#" class="text-white textdec small-link">Solo Travel places</a></li>
+                    </ul>
+                </div>
+                <div class="col-md">
+                    <h6><b>Social Networks</b></h6>
+                    <ul class="list-unstyled d-flex p-2">
+                        <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 406.png" alt="Facebook"
+                                    class="rounded-pill"></a></li>
+                        <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 407.png" alt="Twitter"
+                                    class="rounded-pill"></a></li>
+                        <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 408.png"
+                                    alt="Instagram" class="rounded-pill"></a></li>
+                        <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 410.png"
+                                    alt="Instagram" class="rounded-pill"></a></li>
+                        <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 409.png"
+                                    alt="Instagram" class="rounded-pill"></a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-md">
-              <h6><b>Get the App</b></h6>
-              <ul class="list-unstyled">
-                <li><a href="#" class="text-white textdec small-link">IOS app</a></li>
-                <li><a href="#" class="text-white textdec small-link">Android app</a></li>
-              </ul>
-            </div>
-            <div class="col-md">
-              <h6><b>Company</b></h6>
-              <ul class="list-unstyled">
-                <li><a href="#" class="text-white textdec small-link">About Us</a></li>
-                <li><a href="#" class="text-white textdec small-link">Blog</a></li>
-                <li><a href="#" class="text-white textdec small-link">Careers</a></li>
-                <li><a href="#" class="text-white textdec small-link">PointMAX</a></li>
-              </ul>
-            </div>
-            <div class="col-md">
-              <h6><b>Destination</b></h6>
-              <ul class="list-unstyled">
-                <li><a href="#" class="text-white textdec small-link">Cities</a></li>
-                <li><a href="#" class="text-white textdec small-link">Spiritual places </a></li>
-                <li><a href="#" class="text-white textdec small-link">Hill Stations</a></li>
-                <li><a href="#" class="text-white textdec small-link">Solo Travel places</a></li>
-              </ul>
-            </div>
-            <div class="col-md">
-              <h6><b>Social Networks</b></h6>
-              <ul class="list-unstyled d-flex p-2">
-                <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 406.png" alt="Facebook"
-                      class="rounded-pill"></a></li>
-                <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 407.png" alt="Twitter"
-                      class="rounded-pill"></a></li>
-                <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 408.png" alt="Instagram"
-                      class="rounded-pill"></a></li>
-                <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 410.png" alt="Instagram"
-                      class="rounded-pill"></a></li>
-                <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 409.png" alt="Instagram"
-                      class="rounded-pill"></a></li>
-              </ul>
-            </div>
-          </div>
         </div>
         <div class="horizantal-line">
         </div>
         <h6 class="text-end mx-5 pt-3">&copy; 2023 Y.SPOT Rooms pvt .ltd.</h6>
-      </footer>
+    </footer>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
