--- a/test.html
+++ b/test.html
@@ -4,18 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red Background Rectangle</title>
-    <style>
-        .red-rectangle {
-            background-color: red;
-            color: white;
-            padding: 4px 8px;
-            display: inline-block;
-        }
-    </style>
 </head>
 <body>
-    <div class="red-rectangle">
-        Available Soon
-    </div>
+<style>
+    /* Base styles (default for mobile-first approach) */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.header, .main, .footer {
+  margin: 10px 0;
+  padding: 20px;
+  background-color: #ff0000;
+}
+
+/* Media query for tablets (min-width: 600px) */
+@media (min-width: 600px) {
+  .container {
+    width: 90%;
+    margin: 0 auto;
+  }
+  
+  .header, .main, .footer {
+    padding: 30px;
+  }
+}
+
+/* Media query for desktops (min-width: 900px) */
+@media (min-width: 900px) {
+  .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .header, .main, .footer {
+    flex: 1;
+    margin: 10px;
+  }
+}
+
+</style>
 </body>
 </html>
