--- a/login/index.html
+++ b/login/index.html
@@ -54,15 +54,14 @@
         <button class="btn text-light w-100 py-2" type="submit" style="background-color: #FF1717; height: 50px;">
           Submit
         </button>
-        <p class="mt-4 with-line-left with-line-right ">Or use one of these options</p>
+        <p class="mt-4 with-line-left with-line-right  ">Or use one of these options</p>
         <div class="d-flex justify-content-center mb-4" style="gap: 10px;">
           <div class="container text-center" style="gap: 10px;">
             <a href="">
-              <button type="button" class="btn  mt-3 p-0"
-                style="width: 60px; height: 60px; border-radius: 5px; box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);">
-                <img src="../assets/img/Google_Icons-09-512.webp" alt="Google Logo"
-                  style="height: 100%; width: 100%; object-fit: cover; border-radius: 5px;">
-              </button>
+              <button id="google-login" type="button" class="btn mt-3 p-0" style="width: 60px; height: 60px; border-radius: 5px; box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);">
+                <img src="https://example.com/assets/img/Google_Icons-09-512.webp" alt="Google Logo" style="height: 100%; width: 100%; object-fit: cover; border-radius: 5px;">
+            </button>
+            
             </a>
           </div>
           <!-- Add more buttons for Facebook, Apple if needed -->
@@ -76,6 +75,7 @@
     </main>
   </div>
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  <script src="./script.js" type="module"></script>
+  </body>
 
 </html>
