payment section next page redirect pagination are added

--- a/reservation page/reservation.html
+++ b/reservation page/reservation.html
@@ -284,10 +284,12 @@
             <div class="border container shadow-sm rounded-3 mb-3">
                 <div class="total-cost-overview">
                     <div class="d-flex bd-highlight justify-content-center align-items-center">
-                        <img class="px-1" src="image/payment method icons/stars.jpg" alt="" style="width: 45px; height: 40px;">
-                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Reservation</b> <br>Pay when you
-                            check-in</div>
-                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt="">
+                        <a href="../confirmationpage/confirmation.html"><img class="px-1" src="image/payment method icons/stars.jpg" alt="" style="width: 45px; height: 40px;"></a>
+                        <div class="p-1 w-100 bd-highlight"><a href="../confirmationpage/confirmation.html" class="text-dark" style="text-decoration: none;"><b style="font-size: 16px;">Reservation</b> <br>Pay when you
+                            check-in</a></div>
+                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="../confirmationpage/confirmation.html" alt="">
+                        </div>
+                        <div class="p-3 flex-shrink-1 bd-highlight "> <a href="../confirmationpage/confirmation.html"><img src="./image/arrow_forward_ios.jpg" alt=""></a>
                         </div>
                     </div>
                     <hr class=" text-danger bold" style="margin: 1%;">
