--- a/reservation page/reservation.html
+++ b/reservation page/reservation.html
@@ -299,7 +299,7 @@
                             from your Bank Account</div>
                         <div
                         class="col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center single-line available-soon-sticker">
-                        <b>Available Soon</b>
+                        <b class="p-1">Available Soon</b>
                         </div>
                         <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt="">
                         </div>
@@ -312,7 +312,7 @@
                         </div>
                         <div
                         class="col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center single-line available-soon-sticker">
-                        <b>Available Soon</b>
+                        <b class="p-1">Available Soon</b>
                         </div>
                         <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt="">
                         </div>
@@ -324,7 +324,7 @@
                             Banks Available</div>
                         <div
                         class="col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center single-line available-soon-sticker">
-                        <b>Available Soon</b>
+                        <b class="p-1">Available Soon</b>
                         </div>    
                         <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt="">
                         </div>
@@ -336,8 +336,8 @@
                             <br>AmazonPay, Mobikwik, Payzapp
                         </div>
                         <div
-                            class="col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center single-line available-soon-sticker">
-                            Available Soon
+                            class=" col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center single-line available-soon-sticker">
+                            <b class="p-1">Available Soon</b>
                         </div>
                         <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt="">
                         </div>
@@ -350,7 +350,7 @@
                         </div>
                         <div
                             class="me-3 col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center single-line available-soon-sticker">
-                            <b>Available Soon</b>
+                            <b class="p-1">Available Soon</b>
                         </div>
                         <div class="px-2 flex-shrink-1 bd-highlight d-flex justify-content-center align-items-center">
                             <img src="./image/arrow_forward_ios.jpg" alt="">
