--- a/confirmationpage/confirmation.html
+++ b/confirmationpage/confirmation.html
@@ -50,39 +50,49 @@
                                 </div>
                             </div>
                             <hr class="text-danger bold">
-                            <div class="ms-4 ps-3">
-                                <br>
-
-                                <h6 id="one">Entire Stay Duration</h6>
-                                <p class="night">1 night</p>
-                             </div>
-                             <!-- checkin checkout start -->
-                             <div class="row justify-content-between ms-4 pt-1">
-                                <div class="col-lg-3 col-md-6">
-                                    <p>Check In <br> <b>Mon, 27 May, 2024</b> <br> <span>12 am</span></p>
+                            <div class="row justify-content-center align-items-center">
+                                <div class="col-lg-8">
+                                    <div class="ms-4 ps-3">
+                                        <br>
+                                        <h6 id="one">Entire Stay Duration</h6>
+                                        <p class="night">1 night</p>
+                                    </div>
+                                    <!-- check-in checkout start -->
+                                    <div class="row justify-content-between ms-4 pt-1">
+                                        <div class="col-lg-6 col-md-6">
+                                            <p>Check In <br> <b>Mon, 27 May, 2024</b> <br> <span>12 am</span></p>
+                                        </div>
+                                        <div class="col-lg-6 col-md-4">
+                                            <p>Check Out <br> <b>Mon, 27 May, 2024</b> <br> <span>12 am</span></p>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-lg-3 col-md-4">
-                                    <p>Check Out <br> <b>Mon, 27 May, 2024</b> <br> <span>12 am</span></p>
-                                </div>
-                                <div class="ps-4 pb-3 col-md-4 flex-shrink-0 bd-highlight">
-                                    <img src="../reservation page/image/image 3 (1).jpg" alt="">
+                                <div class="ps-4 pb-3 col-lg-4 flex-shrink-0 bd-highlight  text-center" >
+                                    <img  class=" rounded-2 image-fluid" src="./image/image 3.jpg" alt="" style="width: 150px; height: 150px;">
                                 </div>
                             </div>
+                            
                              <!-- checkin checkout end -->
                              <!-- prize and rate start -->
-                             <div class="ms-4 ps-2  ">
-                                <p class="price">Price</p>
-                                <div class="d-flex pb-3 align-items-center">
-                                    <div id="goods" class="flex-grow-1"><b>Goods & services tax is excluded.</b></div>
-                                    <div id="rate" style="margin-right: 165px;" class=""> <b>₹4,620</b></div>
+                             <div class="container">
+                                <div class="m-3 ps-2  ">
+                                    <p class="price">Price</p>
+                                    <div class="d-flex pb-3 align-items-center justify-content-center">
+                                        <div id="goods" class="flex-grow-1"><b>Goods & services tax is excluded.</b></div>
+                                        <div id="rate" class=""><b>₹4,620</b></div> 
+                                    </div>
                                 </div>
-                            </div>
+                             </div>
+                            
                              <!-- prize and rate start -->
                         </div>
                     </div>
                 </div>
             </div>
-           <!--  confirmation page end -->
+            <div class="text-center">
+                <a href="../index.html"> <button  id="home"  type="button" class="btn btn-danger btn-sm" style="height: 50px; width: 200px;">Back To Home</button></a>
+            </div>
+                       <!--  confirmation page end -->
         </main>
         <footer>
             <!-- place footer here -->
