--- a/confirmationpage/confirmation.html
+++ b/confirmationpage/confirmation.html
@@ -8,6 +8,8 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
+        <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png">
+
 
         <!-- Bootstrap CSS v5.2.1 -->
         <link
@@ -90,8 +92,11 @@
                 </div>
             </div>
             <div class="text-center">
-                <a href="../index.html"> <button  id="home"  type="button" class="btn btn-danger btn-sm" style="height: 50px; width: 200px;">Back To Home</button></a>
+                <a href="../index.html">
+                    <button id="home" type="button" class="btn btn-danger btn-sm" style="height: 45px; width: 180px; font-size: 20px;">Back To Home</button>
+                </a>
             </div>
+            
                        <!--  confirmation page end -->
         </main>
         <footer>
