--- a/single-hotel-page/index.html
+++ b/single-hotel-page/index.html
@@ -465,7 +465,7 @@
 </div>
 
   </main>
-  <footer class="footer pt-4">
+  <footer class="footer pt-5 pt-5" style="margin-top: 40px;">
     <div class="container">
       <div class="row">
         <div class="col-md">
